--- a/WeChat.Web/Views/Menu/Create.cshtml
+++ b/WeChat.Web/Views/Menu/Create.cshtml
@@ -3,12 +3,19 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<br />
 
-<hr />
-
-<form method="post">
-    <textarea name="menu"></textarea>
-    <input type="submit" value="Create" />
+<form class="form-horizontal" method="post" role="form">
+    <div class="form-group">
+        <div class="col-sm-2">
+            <input class="btn btn-primary" type="submit" value="Create" />
+        </div>
+        <label>@ViewBag.Result</label>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-12">
+            <textarea style="width:100%" class="form-control" name="menu" rows="20" placeholder="json"></textarea>
+        </div>
+    </div>
 </form>
 
