--- a/WeChat.Web/Views/Menu/Delete.cshtml
+++ b/WeChat.Web/Views/Menu/Delete.cshtml
@@ -3,5 +3,17 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<br />
 
+<form class="form-horizontal" method="post" role="form">
+    <div class="form-group">
+        <div class="col-sm-2">
+            <input class="btn btn-danger" type="submit" value="Delete" />
+        </div>
+        <label>@ViewBag.Result</label>
+    </div>
+</form>
+
+<hr />
+
+@ViewBag.Json
